--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,8 @@
-baseURL: https://example.com
+baseURL: https://aabdelnaby.github.io/personalwebsite/
 languageCode: en-us
 defaultContentLanguage: en
-title: Cupper
+title: Abdelrahman Abdelnaby
 theme: cupper-hugo-theme
-googleAnalytics: UA-123456789-1
-disqusShortname: yourdiscussshortname
 enableGitInfo: true
 
 taxonomies:
@@ -17,9 +15,9 @@ imaging:
   quality: 99
 
 params:
-  description: An accessibility-friendly Hugo theme, ported from the [original Cupper](https://github.com/ThePacielloGroup/cupper) project.
-  homeMetaContent: An accessibility-friendly Hugo theme, ported from the original Cupper project.
-  footer: Made with [Hugo](https://gohugo.io/). Themed by [Cupper](https://github.com/zwbetz-gh/cupper-hugo-theme). Deployed to [Netlify](https://www.netlify.com/).
+  description: Abdelrahman Abdelnaby personal website
+  homeMetaContent: Abdelrahman Abdelnaby personal website
+  footer: Made with [Hugo](https://gohugo.io/). Themed by [Cupper](https://github.com/zwbetz-gh/cupper-hugo-theme). Deployed to [github pages](https://pages.github.com/).
   # For more date formats see https://gohugo.io/functions/format/
   dateFormat: Jan 2, 2006
   codePenUser: someUser
